--- a/main.ipynb
+++ b/main.ipynb
@@ -192,7 +192,12 @@
       "Epoch 142: Best Score = 61\n",
       "Epoch 143: Best Score = 57\n",
       "Epoch 144: Best Score = 125\n",
-      "Epoch 145: Best Score = 50\n"
+      "Epoch 145: Best Score = 50\n",
+      "Epoch 146: Best Score = 80\n",
+      "Epoch 147: Best Score = 132\n",
+      "Epoch 148: Best Score = 92\n",
+      "Epoch 149: Best Score = 33\n",
+      "Epoch 150: Best Score = 154\n"
      ]
     }
    ],
